--- a/index.html
+++ b/index.html
@@ -93,5 +93,10 @@
             </form>
           </div>
         </div>
+        <h2 >Orders:</h2>
+        <ul id="orders" >
+
+        </ul>
+      
 </body>
 </html>
