add show-order div id

--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
         <ul id="orders" >
 
         </ul>
-      
+        <div class="col-md-6" >
+            <div id="show-order" style="margin-left:140%; margin-top: -60%;">
+                <h2></h2>
+                <!-- <p>First name: <span class="first-name"></span></p>
+                <p>Last name: <span class="last-name"></span></p> -->
+                <p>Orders:</p>
+                <ul id="names" ><p style="text-decoration: none">names</p></ul>
+                <ul id="pizzass"><p style="text-decoration: none">Orders</p></ul>
+                <ul id="deliver"> <p style="text-decoration: none">delivery?</p> </ul>
+                <ul id="deliverCharge"> <p style="text-decoration: none">delivery charge is: </p> </ul>
+            </div>
+        </div>
+
 </body>
 </html>
